add lessio security manager for testing